# texteditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  application.cpp  application.hpp  base_text_buffer.cpp  base_text_buffer.hpp  color.cpp  color.hpp  coord.cpp  coord.hpp  cpp_highlighter.cpp  cpp_highlighter.hpp  current_dir.cpp  current_dir.hpp  deja_vu_sans_mono.cpp  deja_vu_sans_mono.hpp  deliting_object.hpp  dialog.cpp  dialog.hpp  file_buffer.cpp  file_buffer.hpp  full_file_name.cpp  full_file_name.hpp  incremental_search_buffer.cpp  incremental_search_buffer.hpp  isearch_buffer.cpp  isearch_buffer.hpp  key_event.cpp  key_event.hpp  layout.cpp  layout.hpp  layoutable.cpp  layoutable.hpp  main.cpp  main_window.cpp  main_window.hpp  open_dialog.cpp  open_dialog.hpp  (+32 more)
